--- a/practice-app-ws/build.gradle
+++ b/practice-app-ws/build.gradle
@@ -18,6 +18,10 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.9.3'
+    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-validation
+    implementation 'org.springframework.boot:spring-boot-starter-validation:3.2.5'
+
 }
 
 tasks.named('test') {
