--- a/practice-app-ws/build.gradle
+++ b/practice-app-ws/build.gradle
@@ -19,8 +19,10 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.9.3'
-    // https://mvnrepository.com/artifact/javax.validation/validation-api
-    implementation 'javax.validation:validation-api:2.0.1.Final'
+    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-validation
+    implementation 'org.springframework.boot:spring-boot-starter-validation:3.1.2'
+
+
 }
 
 tasks.named('test') {
